# raytracer

./: CMakeLists.txt
include/: tuple.hpp
src/: tuple.cpp
test/: CMakeLists.txt  tuple_test.cpp
